# ibm-attrition-analysis

./: pyproject.toml
Gradient Boosting/: main.ipynb
attrition1/: main.ipynb
attrition2/: main.ipynb
